# smartInfillGenerator

./: .gitignore  COMMERCIAL.md  CONTRIBUTING.md  Cargo.toml  Cube.3mf  DESIGN.md  PHASE1_RESULTS.md  README.md  deny.toml  hook5 v3.step  hook5 v3.stl  package-lock.json  smoke-wasm.mjs  stepnode_test.mjs  wasm-bench.js  wrangler.jsonc
.cargo/: config.toml
.github/workflows/: deploy-cloudflare.yml  deploy.yml
crates/sig-core/: Cargo.toml
crates/sig-core/src/: attach.rs  bins.rs  bvh.rs  cancel.rs  check.rs  fem.rs  lib.rs  mesh.rs  mg.rs  par.rs  progress.rs  segment.rs  selfsupport.rs  simp.rs  solve.rs  step.rs  stress.rs  threemf.rs  voxel.rs  zip.rs
crates/sig-core/tests/: meshbench.rs  phase2.rs  phase3.rs  printed.rs  validation.rs
crates/sig-wasm/: Cargo.toml
crates/sig-wasm/src/: lib.rs
design-drafts/: draft-1-drawing-office.html  draft-2-werkbank.html  draft-3-operator-dark.html  index.html
docs/: README.md  deploy.md  theory-manual.md  verification-manual.md
web/: index.html  package-lock.json  package.json  repro-dot.mjs  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/bench/: bench.worker.js  index.html  run.mjs  shot-disclaimer.mjs
web/public/: _headers  coi-serviceworker.js
web/scripts/: build-wasm.mjs
web/src/: App.tsx  main.tsx  store.ts  styles.css  types.ts  vite-env.d.ts
web/src/engine/: EngineClient.ts
web/src/ui/: Disclaimer.tsx  Imprint.tsx  Inspector.tsx  NerdLog.tsx  NumInput.tsx  Settings.tsx  Sidebar.tsx  StatusStrip.tsx  StepPanel.tsx  StepRail.tsx  TopBar.tsx  ViewportChips.tsx  fmt.ts
web/src/viewer/: SceneManager.ts  Viewer.tsx
web/src/worker/: engine.worker.ts
