[package]
name = "sig-core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
publish = false

[features]
default = ["parallel"]
parallel = ["dep:rayon"]

[dependencies]
rayon = { version = "1.10", optional = true }
miniz_oxide = "0.8"
quick-xml = "0.37"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"
