[package]
name = "sig-core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
publish = false

[features]
default = ["parallel"]
parallel = ["dep:rayon"]
# STEP import via the truck CAD kernel. OPTIONAL and OFF by default: truck pulls
# parking_lot/chrono whose modern windows-* crates use `raw-dylib`, which the
# stock rustup *windows-gnu* toolchain can't build (no MinGW assembler) — so a
# hard dep would break native `cargo test`/`build` on a default Windows setup.
# Gating it keeps native dev clean; the wasm target (the real product) builds it
# fine, and sig-wasm turns this feature on.
step = ["dep:truck-stepio", "dep:truck-meshalgo", "dep:truck-modeling", "dep:truck-polymesh"]

[dependencies]
rayon = { version = "1.10", optional = true }
miniz_oxide = "0.8"
quick-xml = "0.37"
# STEP import (BREP read + tessellation). All Apache-2.0 (RICOS / truck);
# vetted 2026-06-13 against deny.toml. truck-meshalgo's default `vtk` feature
# pulls vtkio -> xz2 -> lzma-sys (a C lib, non-wasm); we take only `tessellation`.
# truck-stepio keeps its default `in`/`derive` features — `in` IS the STEP reader.
truck-stepio = { version = "0.3.0", optional = true }
truck-meshalgo = { version = "0.4.0", default-features = false, features = ["tessellation"], optional = true }
truck-modeling = { version = "0.6.0", optional = true }
truck-polymesh = { version = "0.6.0", optional = true }

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "stepbench"
path = "src/bin/stepbench.rs"
required-features = ["step"]
