[package]
name = "sig-wasm"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = []
# STEP import (truck CAD kernel). OPT-IN, enabled by the wasm build script
# (build-wasm.mjs passes `--features step`). NOT default so a host-target
# `cargo build`/`cargo test` of this crate doesn't drag truck onto the native
# windows-gnu toolchain, which can't build its raw-dylib deps (no MinGW
# assembler). The wasm32 target compiles truck cleanly.
step = ["sig-core/step"]
# Threaded build (rayon on wasm): requires nightly + build-std with
# atomics/bulk-memory and a cross-origin-isolated page (SharedArrayBuffer).
# Built as a SEPARATE module (web/src/wasm-mt); the plain build stays the
# fallback for non-isolated hosts.
parallel = ["sig-core/parallel", "dep:wasm-bindgen-rayon"]

[dependencies]
sig-core = { path = "../sig-core", default-features = false }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde_json = "1"
# MIT OR Apache-2.0 (already transitively present via serde_json)
serde = { version = "1", features = ["derive"] }
# Apache-2.0 (AGPL-compatible; vetted 2026-06-12). no-bundler: the threaded
# pkg is served as a static asset (web/public/wasm-mt), not bundled — its
# nested workers re-import the glue by plain relative URL.
wasm-bindgen-rayon = { version = "1.3", optional = true, features = ["no-bundler"] }

# wasm-opt must be told to accept post-MVP features; these flags only enable
# parsing, they don't inject the features into the plain build.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
